# main

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: .env  settings.py  urls.py  views.py
blogapi/: admin.py  models.py  serializers.py  urls.py  views.py
blogapi/migrations/: 0001_initial.py  0002_post_tags.py
public/: index.html
src/: App.css  App.js  index.css  index.js
src/components/ChartOne/: index.js
src/components/ChartTwo/: index.js
src/components/Header/: index.css  index.js
src/components/PostNavigation/: index.js
src/components/PostsBox/: index.js
src/components/PostsCards/: index.css  index.js
src/components/Sidebar/: index.css  index.js
src/pages/: Home.js  Post.js
src/store/: index.js  reducer.js
src/store/actions/: getPosts.js
src/utils/: API.js
